--- a/fluxion/Cargo.toml
+++ b/fluxion/Cargo.toml
@@ -8,7 +8,7 @@ categories = ["concurrency"]
 keywords = ["actor", "distributed", "async", "fluxion"]
 readme = "./README.md"
 version = "0.10.5"
-edition = "2021"
+edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -16,8 +16,8 @@ edition = "2021"
 async-trait = "0.1.80"
 maitake-sync = "0.1.1"
 serde = { version = "1.0.198", default-features = false, optional = true }
-slacktor = { version = "0.3.0", features = ["async"] }
-fluxion_macro = "0.1.0"
+slacktor = { git = "https://github.com/stevehayles/slacktor.git", features = ["async"] }
+fluxion_macro = { path = "../fluxion_macro" }
 const_format = "0.2.32"
 
 
